@@ -20,7 +20,6 @@ import java.util.Set;
 import java.util.function.BiFunction;
 
 import com.b2international.snowowl.core.domain.ConceptMapMapping;
-import com.google.common.collect.ImmutableSet;
 
 /**
  * @since 7.11
@@ -45,8 +44,8 @@ public enum ConceptMapCompareConfigurationProperties {
 		(member1, member2) -> Objects.equals(member1.getTargetComponentURI().identifier(), member2.getTargetComponentURI().identifier())
 	);
 
-	public static final Set<ConceptMapCompareConfigurationProperties> ALL_PROPERTIES = ImmutableSet.of(ConceptMapCompareConfigurationProperties.CODE_SYSTEM, ConceptMapCompareConfigurationProperties.CODE, ConceptMapCompareConfigurationProperties.TERM);
-	public static final Set<ConceptMapCompareConfigurationProperties> DEFAULT_SELECTED_PROPERTIES = ImmutableSet.of(ConceptMapCompareConfigurationProperties.CODE_SYSTEM, ConceptMapCompareConfigurationProperties.CODE);
+	public static final Set<ConceptMapCompareConfigurationProperties> ALL_PROPERTIES = Set.of(ConceptMapCompareConfigurationProperties.CODE_SYSTEM, ConceptMapCompareConfigurationProperties.CODE, ConceptMapCompareConfigurationProperties.TERM);
+	public static final Set<ConceptMapCompareConfigurationProperties> DEFAULT_SELECTED_PROPERTIES = Set.of(ConceptMapCompareConfigurationProperties.CODE_SYSTEM, ConceptMapCompareConfigurationProperties.CODE);
 			
 	private final String label;
 	private final BiFunction<ConceptMapMapping, ConceptMapMapping, Boolean> getSourceEqualFunction;
